--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "bower-npm-resolver": "^0.11.0",
     "chart.js": "^4.4.3",
-    "chartjs-adapter-date-fns": "^3.0.0"
+    "chartjs-adapter-date-fns": "^3.0.0",
+    "flatpickr": "^4.6.13"
   }
 }
