--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "bower-npm-resolver": "^0.11.0",
+    "bowser": "^2.11.0",
     "chart.js": "^4.4.3",
     "chartjs-adapter-date-fns": "^3.0.0",
     "flatpickr": "^4.6.13"
